small design changes; fixed bar chart size on mobile

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -36,8 +36,8 @@ article {
   padding: 1.25em;
   position: relative;
   flex-basis: 22em;
-  background: #ececec;
-  border: 1px solid #dadada;
+  background: #f7f7f7;
+  border: 1px solid #cccccc;
   border-radius: 6px;
 }
 
@@ -64,6 +64,8 @@ label {
 }
 
 .flex-form-container {
+  width: 100%;
+  max-width: 25em;
   margin: 0 auto;
   padding: 2em;
   background-color: #e8e8e8;
@@ -185,9 +187,14 @@ label {
     min-width: 100%;
   }
 
-  .page-bar-chart {
-    margin: 0 0 3em;
+  .page-chart.page-bar-chart {
+    margin: 3em 0;
+    min-height: 10em;
   }
+}
+
+@media only screen and (max-width: 768px) {
+  .page-bar-chart { margin: 0 }
 }
 
 @media only screen and (min-width: 426px) {
