--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: #00000040;
+  background-color: #fff;
   position: fixed;
   width: 100vw;
   top: 0;
@@ -52,7 +52,7 @@ nav a {
 
 .nav-link.nav-selected {
   border-color: #fff;
-  background-color: gray;
+  background-color: #83ceab;
   color: #fff;
 }
 
@@ -60,6 +60,7 @@ nav a {
   height: 0;
   overflow: hidden;
   display: none;
+  box-shadow: -1px 13px 14px 0px #71717140;
 }
 .nav-mobile-menu.expanded {
   height: auto;
